--- a/App/App.csproj
+++ b/App/App.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Forms\Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Item.cs" />
     <Compile Include="Forms\SolicitudLibro.cs">
       <SubType>Form</SubType>
     </Compile>
